<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/listmenuupdate"
        android:title="@string/listmenuupdate"
        compat:showAsAction="never"/>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/groupa"
            android:checked="true"
            android:title="@string/listmenugroupempty">
        </item>
        <item
            android:id="@+id/groupb"
            android:title="@string/listmenugroupagroinf">
        </item>
        <item
            android:id="@+id/groupc"
            android:title="@string/listmenugroupagrolux">
        </item>
    </group>

    <item
        android:id="@+id/listmenuall"
        android:title="@string/listmenuall"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenuabove150le"
        android:title="@string/listmenuabove150"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenubelow150le"
        android:title="@string/listmenubelow150"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenuveteran"
        android:title="@string/listmenuveteran"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenumodern"
        android:title="@string/listmenumodern"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenuwomen"
        android:title="@string/listmenuwomen"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/listmenumen"
        android:title="@string/listmenumen"
        compat:showAsAction="never"/>

</menu>