<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="393dp" >

        <TextView
            android:id="@+id/inputracerViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:text="@string/data_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/inputracerViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputracerViewName"
            android:layout_marginTop="30dp"
            android:text="@string/data_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/inputracerViewTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputracerViewNumber"
            android:layout_marginTop="30dp"
            android:text="@string/data_town"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/inputracerSlalom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputracerTrailer"
            android:layout_marginTop="30dp"
            android:button="@drawable/checkboxselector"
            android:text="@string/data_slalom"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/inputracerDrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/inputracerSlalom"
            android:layout_marginTop="30dp"
            android:button="@drawable/checkboxselector"
            android:text="@string/data_drag"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/inputracerEditTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerViewTown"
            android:layout_alignBottom="@+id/inputracerViewTown"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/inputracerEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerViewNumber"
            android:layout_alignBottom="@+id/inputracerViewNumber"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/black" >
        </EditText>

        <EditText
            android:id="@+id/inputracerEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerViewName"
            android:layout_alignBottom="@+id/inputracerViewName"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/inputracerTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/inputracerDrag"
            android:layout_below="@+id/inputracerEditTown"
            android:layout_marginTop="20dp"
            android:button="@drawable/checkboxselector"
            android:text="@string/data_trailer"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/inputracerbtnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerTrailer"
            android:layout_alignBottom="@+id/inputracerTrailer"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_update"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/inputracerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerSlalom"
            android:layout_alignBottom="@+id/inputracerSlalom"
            android:layout_alignLeft="@+id/inputracerbtnupdate"
            android:text="@string/btn_save"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/inputracerbtndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inputracerDrag"
            android:layout_alignBottom="@+id/inputracerDrag"
            android:layout_alignLeft="@+id/inputracerbtn"
            android:text="@string/btn_delete"
            android:textColor="@color/black" />

    </RelativeLayout>

</ScrollView>